<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/red">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/avatar_me"
                    app:civ_border_width="0dp" />

                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:text="哆啦A梦"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontsize_14sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/remainder_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="余额" />

            <TextView
                android:id="@+id/money_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="￥10000.00元" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginTop="@dimen/space_5"
                android:background="@color/huise"
                android:gravity="center" />

            <TextView
                android:id="@+id/cash_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="提现"
                android:textColor="@color/red" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_15"
            android:background="@color/beijing"></View>

        <LinearLayout
            android:id="@+id/one_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_car_engine"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/two_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_car"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/three_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_data"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/four_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_insurance"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/five_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_info"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/six_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_bind_phone"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <LinearLayout
            android:id="@+id/seven_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_tab_bg"
            android:gravity="center_vertical"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/space_15"
                android:src="@drawable/publish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textSize="@dimen/fontsize_14sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/beijing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80" />

    </LinearLayout>
</ScrollView>